hotfix: updated repo url

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com.git"
   },
-  "author": "Mustafa Pekkirişci",
+  "author": "Ananya Shrimali",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/issues"
